--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "update": "ncu -u"
   },
   "dependencies": {
+    "@loadable/component": "^5.13.1",
     "framer-motion": "^1.9.1",
     "gatsby": "^2.19.32",
     "gatsby-image": "^2.2.43",
