--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-helmet": "^5.2.1",
+    "react-typist": "^2.0.5",
     "styled-components": "^5.0.1",
     "use-media": "^1.4.0"
   },
