add events and contact section

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "particles-bg": "^2.5.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-feather": "^2.0.8",
     "react-helmet": "^5.2.1",
     "react-typist": "^2.0.5",
     "styled-components": "^5.0.1",
